Added some buttons to frontend, with some CSS and frontend call skeleton

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,20 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EVE ISK Ph</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+</head>
     <body>
         It works!
+        <br/>
+        <input type="button" id="login-btn" value="Login with EVE" />
+        <br/>
+        <input type="button" id="get-systems-btn" value="Get Systems" />
     </body>
+    <script src="scripts/main-front.js"></script>
 </html>
