modified api routes, updated ignore

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
         <input type="button" id="login-btn" value="Login with EVE" />
         <br/>
         <input type="button" id="get-systems-btn" value="Get Systems" />
+        <br/>
+        <input type="button" id="get-system-details-btn" value="Get System Details" />
     </body>
     <script src="scripts/main-front.js"></script>
 </html>
